# tanishi-ai

./: .env.example  .env~  .gitignore  CONTRIBUTING_SKILLS.md  LICENSE  README.md  README_OFFLINE.md  linkedin_post_tanishi.txt  package-lock.json  patch_judge.py  proactive_state.json  pyproject.toml  requirements.txt  setup.sh  tanishi_linkedin_post.md  tanishi_twitter_posts.md  tanishicore__init__.py
autoresearch_results/: experiments.jsonl  reflections.jsonl  results.tsv
data/: db.sqlite
docs/: IMPROVEMENT_PLAN.md  TOOL_INVENTORY.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
tanishi/: __init__.py  cli.py  cli.py~
tanishi/api/: __init__.py  server.py
tanishi/autoresearch/: README.md  __init__.py  autoresearch.py  benchmark.py  benchmark.py.bak  mutation_rules.json  mutator.py  reflections.py  scorer.py  scoring_config.json  setup_configs.py
tanishi/bridges/: __init__.py  telegram_bot.py
tanishi/config/: __init__.py  memory_params.py  prompts.py
tanishi/core/: __init__.py  autonomy.py  brain.py  chat_context.py  config.py  personality.py
tanishi/dashboard/: index.html
tanishi/dashboard_v2/: index.html
tanishi/desktop/: __init__.py  avatar.html  avatar.py  screen_watcher.py  tray.py
tanishi/memory/: __init__.py  auto_learn.py  dream.py  dream_scheduler.py  embeddings.py  manager.py  trust.py
tanishi/proactive/: README.md  __init__.py  calendar_helper.py  daily_briefing.py  proactive_speak.py  run_proactive.py  sentinel.py  wake_word.py
tanishi/skills/: __init__.py  skill_extractor.py  (+2 more)
(+61 files in other folders)
